refactor to move string to resource file

--- a/PhoneBookDataEditor/res/values/strings.xml
+++ b/PhoneBookDataEditor/res/values/strings.xml
@@ -7,15 +7,66 @@
 	<string name="menuitem_open"> Open File...</string>
 	<string name="menuitem_save"> Save to File...</string>
 	<string name="menuitem_about"> About</string>
-	<string name="phonebooklist_title"> Phone Book List</string>
-	<string name="maplist_title"> Map List</string>
-	<string name="selectphonebooklist_title"> Phone Book List</string>
-	<string name="selectmaplist_title"> Map List</string>
 	<string name="version">PhoneBook Data Editor Android v1.0</string>
     <string name="author">by CQLI</string>
+    <string name="edit_phonebook_photo">Photo:</string>
+    <string name="edit_phonebook_initials">Initials:</string>
+    <string name="edit_phonebook_name">Name:</string>
+    <string name="edit_phonebook_localname">Local Name:</string>
+    <string name="edit_phonebook_gender">Gender:</string>
+    <string name="edit_phonebook_phone">Phone:</string>
+    <string name="edit_phonebook_depno">Dep.No:</string>
+    <string name="edit_phonebook_depname">Dep.Name:</string>
+    <string name="edit_phonebook_title">Title:</string>
+    <string name="edit_phonebook_manager">Manager:</string>
+    <string name="edit_phonebook_seat">Seat Position:</string>
+    <string name="edit_seat_floor">Floor Number:</string>
+    <string name="edit_seat_x">X:</string>
+    <string name="edit_seat_y">Y:</string>
+    <string name="edit_seat_width">Width:</string>
+    <string name="edit_seat_height">Height:</string>
+    <string name="edit_seat_direction">Direction:</string>
+    <string name="new_map_image">Map Image:</string>
+    <string name="new_map_imagefile">Filename:</string>
+    <string name="new_map_floor">Floor Number:</string>
+    <string name="new_phonebook_photo">Photo:</string>
+    <string name="new_phonebook_initials">Initials:</string>
+    <string name="new_phonebook_name">Name:</string>
+    <string name="new_phonebook_localname">Local Name:</string>
+    <string name="new_phonebook_gender">Gender:</string>
+    <string name="new_phonebook_phone">Phone:</string>
+    <string name="new_phonebook_depno">Dep.No:</string>
+    <string name="new_phonebook_depname">Dep.Name:</string>
+    <string name="new_phonebook_title">Title:</string>
+    <string name="new_phonebook_manager">Manager:</string>
     <string name="searchby_initials">Initials:</string>
     <string name="searchby_name">Name:</string>
     <string name="searchby_phone">Phone:</string>
     <string name="searchby_depName">Dep. Name:</string>
     <string name="searchby_manager">Manager:</string>
+    <string name="lable_okbtn">OK</string>
+    <string name="lable_cancelbtn">Cancle</string>
+    <string name="lable_closebtn">Close</string>
+    <string name="lable_savebtn">Save</string>
+    <string name="lable_notsavebtn">Not Save</string>
+    <string name="lable_camera">Camera</string>
+    <string name="lable_spinner_select">Please select ...</string>
+    <string name="lable_photoalbum">Photo Album</string>
+    <string name="lable_gender_male">Male</string>
+    <string name="lable_gender_female">Female</string>
+    <string name="title_pickphoto">Pick Photo From</string>
+    <string name="title_pickphoto_by_album">Please select photo</string>
+    <string name="title_select_package">Select Data Package File</string>
+    <string name="title_select_saveto" >Select Save File</string>
+    <string name="title_search">Please input search criteria:</string>
+    <string name="title_about">About</string>
+    <string name="title_phonebooklist"> Phone Book List</string>
+	<string name="title_maplist"> Map List</string>
+	<string name="title_select_phonebooklist"> Select Item</string>
+	<string name="title_select_maplist"> Select Item</string>
+	<string name="title_new_phonebook">New PhoneBook Item</string>
+	<string name="title_edit_phonebook">Edit PhoneBook</string>
+    <string name="title_edit_seat">Edit Seat Info</string>
+    <string name="title_new_map">New Map Item</string>
+   	<string name="title_select_mapimage">Select Map Image File</string> 
 </resources>
